--- a/src/Shared/LayoutSecure.Master
+++ b/src/Shared/LayoutSecure.Master
@@ -35,6 +35,12 @@
     <script type="text/javascript" id="wa_u"></script>
     <script type="text/javascript" src="../javascript/interceut1.js"></script>
 
+    <!-- Bing Tracking -->
+
+    <script>(function (w, d, t, r, u) { var f, n, i; w[u] = w[u] || [], f = function () { var o = { ti: "4078397" }; o.q = w[u], w[u] = new UET(o), w[u].push("pageLoad") }, n = d.createElement(t), n.src = r, n.async = 1, n.onload = n.onreadystatechange = function () { var s = this.readyState; s && s !== "loaded" && s !== "complete" || (f(), n.onload = n.onreadystatechange = null) }, i = d.getElementsByTagName(t)[0], i.parentNode.insertBefore(n, i) })(window, document, "script", "//bat.bing.com/bat.js", "uetq");</script><noscript><img src="//bat.bing.com/action/0?ti=4078397&Ver=2" height="0" width="0" style="display:none; visibility: hidden;" /></noscript>
+	
+    <!-- Google Analytics -->
+
     <%-- Disabled 2014-06-20 by Dirigo
     <script> 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ 
